--- a/assets/scss/layout/navigations.scss
+++ b/assets/scss/layout/navigations.scss
@@ -161,7 +161,7 @@ nav.main-nav {
                                                                                              Mobile-Nav
 ================================================================================================= | =============================================================================================*/
 nav.mobile-nav {
-  @include gradiant-green;
+  background : darken($light,3%);
   position         : fixed;
   top              : 0;
   left             : 0;
