--- a/assets/scss/layout/typo.scss
+++ b/assets/scss/layout/typo.scss
@@ -77,6 +77,10 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom : 0;
   }
 
+  .col > & {
+    padding-left : 0;
+  }
+
 }
 //-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 // Phone Size
@@ -95,16 +99,16 @@ $h2-tablet-size : rem(28px);
 $h3-tablet-size : rem(26px);
 $h4-tablet-size : rem(24px);
 $h5-tablet-size : rem(22px);
-$h6-tablet-size : rem(20px);
+$h6-tablet-size : rem(22px);
 //-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 // Desktop Size
 //-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 $h1-desktop-size : rem(36px);
 $h2-desktop-size : rem(32px);
 $h3-desktop-size : rem(24px);
-$h4-desktop-size : rem(36px);
-$h5-desktop-size : rem(36px);
-$h6-desktop-size : rem(36px);
+$h4-desktop-size : rem(18px);
+$h5-desktop-size : rem(22px);
+$h6-desktop-size : rem(22px);
 //-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 //                                                                                               Margins
 //-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -113,7 +117,7 @@ $h1-margin-bottom : rem(80px);
 $h2-margin-bottom : rem(40px);
 $h3-margin-bottom : rem(16px);
 $h5-margin-bottom : rem(90px);
-$h4-margin-bottom : rem(90px);
+$h4-margin-bottom : rem(2px);
 $h6-margin-bottom : rem(90px);
 h1 {
   font-size     : $h1-phone-size;
@@ -126,6 +130,11 @@ h1 {
 
   b {
     color : $color-1;
+  }
+
+  body.page-template-page-kontaktformular & {
+    font-size     : rem(36px);
+    margin-bottom : 0;
   }
 
   @include breakpoint(sm) {
@@ -144,6 +153,7 @@ h1 {
     font-size     : $h1-desktop-size;
     margin-bottom : $h1-margin-bottom;
   }
+
 }
 //-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 h2 {
@@ -203,31 +213,30 @@ h3 {
 }
 //-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 h4 {
-  font-size     : $h4-desktop-size;
-  margin-bottom : $h4-margin-bottom;
+  font-size     : $h4-phone-size;
+  margin-bottom : $h4-margin-bottom*0.3;
   color         : $color-2;
 
   @include breakpoint(xs) {
-    font-size : $h3-desktop-size;
+    font-size : $h4-phone-size;
   }
 
   @include breakpoint(sm) {
-    font-size : $h3-desktop-size;
+    font-size : $h4-phone-size;
   }
 
   @include breakpoint(md) {
-    font-size : $h3-desktop-size;
+    font-size     : $h4-desktop-size;
+    margin-bottom : $h4-margin-bottom;
   }
 
   @include breakpoint(lg) {
-    font-size : $h3-desktop-size;
-  }
-
-  @include breakpoint(xs) {
+    font-size : $h4-desktop-size;
   }
 }
 //-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-h5 { font-size  : $h5-desktop-size;
+h5 {
+  font-size     : $h5-desktop-size;
   margin-bottom : $h5-margin-bottom;
   color         : $color-2;
 }
@@ -240,5 +249,9 @@ h6 {
 /*=================================================================================================================================================================================================
                                                                                            Other Elements
 ================================================================================================= | =============================================================================================*/
-b { font-weight : 500; }
-i { font-family : $main-font; }
+b {
+  font-weight : 500;
+}
+i {
+  font-family : $main-font;
+}
