--- a/assets/scss/layout/content.scss
+++ b/assets/scss/layout/content.scss
@@ -608,6 +608,10 @@
   flex-flow       : row nowrap;
   margin-bottom   : 0;
 
+  p, h2 {
+    text-align : center;
+  }
+
   @include breakpoint(md) {
     padding : 5rem 0;
   }
@@ -651,35 +655,32 @@
   background    : linear-gradient(-90deg, rgba(30, 44, 67, 1) 0%, rgba(22, 32, 48, 1) 100%);
   padding       : 2rem 0;
   margin-bottom : rem(120px)*0.6;
-
   @include removeGridMargins;
-
+  .package {
+    display : none;
+  }
   .row {
-    display: flex;
-    align-content: center;
-    align-items: center;
+    display       : flex;
+    align-content : center;
+    align-items   : center;
     .col {
-
     }
   }
-
   h1 {
     font-size   : rem(48px);
     line-height : 100%;
     color       : $light;
-    text-align: left;
-    margin: 0;
+    text-align  : left;
+    margin      : 0;
 
     span {
       color     : $light;
       font-size : rem(48px)*0.6;
     }
   }
-
   .image {
     display : none;
   }
-
   @include breakpoint(md) {
     margin-bottom : rem(120px);
     height        : 100vh;
@@ -689,12 +690,11 @@
     .wrap {
       display : flex;
     }
-
     h1 {
-      font-size: rem(80px);
-      line-height: 70%;
+      font-size   : rem(80px);
+      line-height : 70%;
       span {
-        font-size: rem(32px);
+        font-size : rem(28px);
       }
 
     }
@@ -713,7 +713,28 @@
 
     }
   }
+  @include breakpoint(lg) {
+    .package {
+      display         : flex;
+      flex-flow       : column;
+      align-items     : center;
+      align-content   : center;
+      justify-content : center;
+      justify-items   : center;
 
+      img {
+        height     : 100%;
+        max-height : rem(114px);
+        width      : auto;
+      }
+
+      span {
+        margin-top  : rem(20px);
+        color       : $light;
+        font-weight : 300;
+      }
+    }
+  }
 }
 ul.leistungen {
   column-count : 1;
@@ -726,17 +747,11 @@ ul.leistungen {
   }
 }
 .projektContainer {
-  position    : relative;
-  margin-left : 46px;
+  position     : relative;
+  padding-left : rem(32px);
+  margin-left  : rem(16px);
+  border-left  : 1px solid lighten($color-2, 50%);;
 
-  &:before {
-    content    : '';
-    height     : 90.2%;
-    width      : 1px;
-    background : $color-4;
-    position   : absolute;
-    left       : -33px;
-  }
   .station {
     margin-bottom : 2rem;
     position      : relative;
@@ -753,9 +768,24 @@ ul.leistungen {
       text-align    : center;
       color         : $light;
       line-height   : 33px;
+      z-index       : 300;
 
       &.st-2 & {
         content : '2';
+      }
+    }
+    &:last-of-type {
+      position : relative;
+
+      &:after {
+        content          : '';
+        position         : absolute;
+        width            : 8px;
+        height           : 100%;
+        left             : -37px;
+        background-color : $light;
+        top              : 0;
+        z-index          : 10;
       }
     }
 
@@ -819,15 +849,68 @@ ul.leistungen {
       color       : $color-1;
       font-weight : 400;
     }
-
     p {
-      font-size   : rem(14px);
       font-weight : 400;
-      font-style  : italic;
       color       : lighten($color-2, 20%);
       text-align  : left;
     }
+  }
 
+  @include breakpoint(md) {
+
+    .infos {
+      .col {
+        margin-bottom : rem(60px);
+      }
+      p {
+        font-size : $font-size*0.95;
+      }
+    }
+  }
+}
+/*=================================================================================================================================================================================================
+                                                                                            Kontaktformular
+================================================================================================= | =============================================================================================*/
+body.page-template-page-kontaktformular {
+  .titleBox {
+    display        : flex;
+    flex-flow      : row nowrap;
+    width          : 100%;
+    padding-top    : 1rem;
+    padding-bottom : 2rem;
+    border-bottom  : 1px solid lighten($color-2, 50%);;
+
+    h1 {
+      flex       : 0 0 50%;
+      text-align : left;
+      font-size  : rem(42px);
+      align-self : center;
+      text-align : right;
+    }
+
+    img {
+      flex       : 0 0 auto;
+      max-height : rem(90px);
+      align-self : center;
+    }
+
+    @include breakpoint(md) {
+      padding-top : 3rem;
+
+    }
+  }
+  .col {
+    .wrap {
+      display         : flex;
+      flex-flow       : row;
+      justify-items   : center;
+      justify-content : center;
+    }
+  }
+}
+body.page-template-page-impressum {
+  p {
+    text-align : left !important;
   }
 }
 /*=================================================================================================================================================================================================
@@ -869,7 +952,9 @@ ul.leistungen {
 
 }
 .whiteContent {
-  p, i, b, h1, h6, h5, h4, h3, h2, h1 & { color : $white; }
+  p, i, b, h1, h6, h5, h4, h3, h2, h1 & {
+    color : $white;
+  }
 }
 .shaddow-1 {
   text-shadow : rgba(0, 0, 0, 0.3) 1px 1px 1px;
@@ -885,4 +970,43 @@ ul.leistungen {
   @include breakpoint(md) {
     max-width : $template-width;
   }
+}
+.kontakt {
+  display : none;
+
+  @include breakpoint(md) {
+    // address <>
+    &.adress-1 {
+      display   : flex;
+      flex-flow : column;
+
+      .row {
+        margin : 0 0 rem(8px) 0;
+      }
+    }
+  }
+
+}
+img.kontakt.logo {
+  padding-bottom : 1rem;
+  width          : rem(120px);
+
+}
+.titlePage {
+  padding       : 0 0 2rem 0;
+  text-align    : center;
+  width         : 100%;
+  border-bottom : 1px solid lighten($color-2, 30%);
+  h1 {
+    margin-bottom : 0;
+  }
+
+  @include breakpoint(md) {
+    padding : 3rem 0;
+  }
+
+  body.page-template-page-startseite & {
+    border : 0;
+  }
+
 }
